# execution-models

./: .gitignore  CMakeLists.txt  README.md  activate_intel.sh  create.sh  execute.sh  execute_data_volume.sh  execute_selectivity.sh  measure.sh  plot.py  plot_vol.py
data_volume/12600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/12600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/18600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/18600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/24600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/24600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/30600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/30600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/36600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/36600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/42600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/42600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/48600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/48600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/54600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/54600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/6600000/non_vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
data_volume/6600000/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
measurements/memory_throughput/: measure.md
scripts/: benchmarks.py  cardinality_exploration.py
selectivity/0/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
selectivity/10/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
selectivity/2/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
selectivity/4/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
selectivity/6/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
selectivity/8/vectorized/: q1_compiled.csv  q1_hybrid.csv  q1_normal.csv  q6_compiled.csv  q6_hybrid.csv  q6_normal.csv
src/: CMakeLists.txt  Main.cpp  MathematicalOperators.cpp  MathematicalOperators.h  Measurements.cpp  QueryFourteen.cpp  QueryFourteen.h  QueryOne.cpp  QueryOne.h  QuerySix.cpp  QuerySix.h  Scan.cpp  Scan.h  StopWatch.cpp  StopWatch.h  TableReader.cpp  TableReader.h  tableReader.cpp
test/: Main.cpp
